fixed link to js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <canvas id="canvas" class="canvas" width="500" height="500"></canvas>
-    <script src="/js/snake-game.js" type="module"></script>
+    <script src="./js/snake-game.js" type="module"></script>
 </body>
 
 </html>
